--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
-    {% if site.tags != "" %}
+    <!-- {% if site.tags != "" %}
       {% include tags.html %}
-    {% endif %}
+    {% endif %} -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
